--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,11 +62,17 @@ dependencies:
   readmore: ^2.1.0
   scrollable_positioned_list: ^0.2.3 #custom calendar time line.
   flutter_rating_bar: ^4.0.0 #convert ob to json
+  hexcolor: ^2.0.7
+  email_validator: ^2.0.1
+  fluttertoast: ^8.0.9
+  device_info_plus: ^2.0.1
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-
+  firebase_core: ^1.3.0
+  firebase_analytics: ^8.1.2
+  firebase_messaging: ^10.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
