--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,9 @@ dependencies:
   firebase_core: ^1.3.0
   firebase_analytics: ^8.1.2
   firebase_messaging: ^10.0.3
+  connectivity_plus: ^2.3.0 #internet connection
+  flutter_facebook_auth: ^4.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
