--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,5 +70,6 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation platform('com.google.firebase:firebase-bom:29.3.1')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.facebook.android:facebook-login:latest.release'
 
 }
