--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,7 +75,7 @@ dependencies:
   firebase_messaging: ^10.0.3
   connectivity_plus: ^2.3.0 #internet connection
   flutter_facebook_auth: ^4.3.0
-
+  flutter_datetime_picker: ^1.5.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
