--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,9 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   sqflite: ^2.0.2+1
   path: ^1.8.0
+  flutter_typeahead: ^4.0.0
+  dropdown_button2: ^1.5.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -86,5 +89,6 @@ flutter:
     - assets/svg/
     - assets/gif/
     - assets/anim/
+    - assets/json/
     - .env.dev
     - .env
