--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,8 @@ dev_dependencies:
   json_serializable: ^6.2.0
   json_annotation: ^4.5.0
   flutter_lints: ^1.0.0
+  geolocator: ^7.7.1
+  geocoding: ^2.0.1
 
 flutter:
   uses-material-design: true
