--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,7 +83,7 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   geolocator: ^7.7.1
   geocoding: ^2.0.1
-
+  rxdart: ^0.27.3
 flutter:
   uses-material-design: true
   assets:
